--- a/src/features/Container/Protocols/EnrichedContent/MedicalTerm.scss
+++ b/src/features/Container/Protocols/EnrichedContent/MedicalTerm.scss
@@ -61,10 +61,14 @@
 }
 .cancel{
   color:brown;
+  margin-left: 5px;
 }
 .save{
-  color: blue
+  color: blue;
+  margin-left: 5px;
 }
 .delete{
   color: red;
+  margin-left: 5px;
 }
+
