--- a/src/features/Container/Protocols/protocols.scss
+++ b/src/features/Container/Protocols/protocols.scss
@@ -111,6 +111,7 @@
       width: 100%;
       > [class*='Panel-container-'] {
         max-width: 100% !important;
+        flex-shrink: inherit;
       }
     }
 
@@ -342,7 +343,12 @@
     }
     padding-right: 10px;
     float: right;
-    width: 100% !important;
+    width: 100%;
+    border-right: 0;
+    flex-shrink: 100;
+    & > div > div {
+      background-color: transparent;
+    }
   }
 
   .view-wrapper .digitize-panel-content {
