--- a/src/features/Container/Protocols/CustomComponents/PDTable/Components/table.scss
+++ b/src/features/Container/Protocols/CustomComponents/PDTable/Components/table.scss
@@ -1,17 +1,17 @@
 .pd-table-container {
   display: flex;
   flex-direction: column;
-  padding: 25px 20px;
+  padding: 35px 30px;
   position: relative;
   margin-bottom: 45px;
   overflow-x: auto;
 }
 .pd-table-inner {
-  max-width: 100%;	
-  width: 100%;	
-  display: table;	
+  max-width: 100%;
+  width: 100%;
+  display: table;
 }
-.pd-table-wrapper{	
+.pd-table-wrapper {
   display: block;
   flex-direction: column;
   width: 100%;
@@ -25,6 +25,7 @@
   min-height: 50px;
   justify-content: center;
   position: relative;
+  width: 100%;
 }
 .pd-table-cell {
   text-align: left;
@@ -66,7 +67,7 @@
   padding: 5px;
   word-wrap: break-word;
   overflow-wrap: break-word;
-  min-width: 40%;
+  min-width: 200px;
   outline: none;
   color: #000;
 }
@@ -146,10 +147,17 @@
 }
 .pd-more-icon {
   cursor: pointer;
+  position: absolute;
   svg {
     height: 0.7em;
     width: 0.7em;
   }
+}
+.rowMoreIcon {
+  left: -10px;
+}
+.columnMoreIcon {
+  top: -10px;
 }
 
 .pd-drag-icon {
@@ -163,7 +171,7 @@
 }
 .rowDrag {
   position: absolute;
-  left: 10px;
+  left: -10px;
   display: flex;
   justify-content: center;
   align-items: center;
