--- a/src/features/Container/Protocols/DigitizedPanel/Digitized.scss
+++ b/src/features/Container/Protocols/DigitizedPanel/Digitized.scss
@@ -7,6 +7,9 @@
   text-align: justify;
   display: flex;
   flex-direction: column;
+  .accordion_details_loader {
+    height: 60vh;
+  }
   .content_container,
   .readable-content {
     h1,
@@ -75,6 +78,25 @@
     line-height: 1.2;
     padding: 10px 0;
   }
+  .discard-icon {
+    margin-left: 6px;
+  }
+}
+
+.auditPopover {
+  padding: 10px;
+  display: flex;
+  width: max-content;
+  .textContainer {
+    padding: 0 5px;
+    p {
+      padding: 5px 0;
+    }
+  }
+}
+.section-actions {
+  display: flex;
+  flex-direction: row;
 }
 
 @media only screen and (max-width: 1366px) {
