--- a/src/features/Container/Protocols/EnrichedContent/MedicalTerm.scss
+++ b/src/features/Container/Protocols/EnrichedContent/MedicalTerm.scss
@@ -65,7 +65,7 @@
   font-size: 18px;
 }
 .save{
-  color: blue;
+  color: rgb(43, 43, 228);
   margin-left: 5px;
   font-size: 18px;
 }
@@ -77,11 +77,14 @@
 }
 .text-area {
   display: flex;
-  flex: 1; /* take up all available space */
-  align-items: center; /* center items vertically */
+  align-items: center; 
   justify-content: space-between;
   margin-left: 5px;
+  margin-top: -12px;
 }
 .icons{
-  margin-top: 10px
+  margin-top: 12px
+}
+.fieldgroup{
+  max-width: 540px;
 }
