--- a/src/features/Container/Protocols/DigitizedPanel/Digitized.scss
+++ b/src/features/Container/Protocols/DigitizedPanel/Digitized.scss
@@ -74,6 +74,7 @@
   justify-content: space-between;
   align-items: center;
   min-height: 48px;
+  width: 100%;
   p {
     line-height: 1.2;
     padding: 10px 0;
@@ -97,6 +98,8 @@
 .section-actions {
   display: flex;
   flex-direction: row;
+  min-height: 48px;
+  align-items: center;
 }
 
 @media only screen and (max-width: 1366px) {
