--- a/src/features/Container/Protocols/EnrichedContent/MedicalTerm.scss
+++ b/src/features/Container/Protocols/EnrichedContent/MedicalTerm.scss
@@ -48,10 +48,11 @@
 .edit-Icon {
   padding-left: 10px;
 }
-.button-style {
-  position: absolute;
-  top: 1%;
-  margin-left: 80%;
+.button {
+  position: fixed;
+  top: 30%;
+  left: 90%;
+  z-index: 999;
 }
 .delete-tag {
   display: flex;
