--- a/src/features/Container/Protocols/CustomComponents/FontProperties/FontProperties.scss
+++ b/src/features/Container/Protocols/CustomComponents/FontProperties/FontProperties.scss
@@ -40,3 +40,28 @@
     }
   }
 }
+
+@media screen and (max-width: 1380px) {
+  .button-container.font-properties .button-exec-icon {
+    padding: 5px;
+    padding: 8px;
+    font-size: 10px;
+    svg {
+      width: 0.5em;
+    }
+  }
+
+  .dropdown .dropbtn {
+    font-size: 10px;
+    padding: 5px;
+    line-height: 1;
+  }
+
+  .right-menu button svg {
+    font-size: 12px;
+  }
+
+  .button-container.font-properties .right-menu {
+    margin-right: 0;
+  }
+}
