--- a/src/features/Container/Protocols/CustomComponents/hoverComponent.scss
+++ b/src/features/Container/Protocols/CustomComponents/hoverComponent.scss
@@ -12,14 +12,21 @@
     }
   }
 }
-#addContentMenu{
+#addContentMenu {
   .add-element {
     display: flex;
     align-items: center;
     min-width: 84px;
-    svg{
+    svg {
       width: 20px;
       margin-right: 5px;
     }
+  }
+}
+
+@media screen and (max-width: 1380px) {
+  .contentmenu.show button svg {
+    height: 12px;
+    width: 12px;
   }
 }
