--- a/src/features/Container/Protocols/DigitizedPanel/Digitized.scss
+++ b/src/features/Container/Protocols/DigitizedPanel/Digitized.scss
@@ -1,7 +1,7 @@
 .section-single-content {
   height: auto;
   overflow: auto !important;
-  padding: 0 30px 20px 10px;
+  padding: 0 5px 20px 10px;
   font-size: 16px;
   line-height: 1.4;
   text-align: justify;
@@ -103,6 +103,9 @@
 }
 
 @media only screen and (max-width: 1366px) {
+  .section-single-content {
+    font-size: 12px;
+  }
   .accordion_summary_container p {
     font-size: 14px;
   }
