--- a/src/features/Container/Protocols/CustomComponents/renderContent.scss
+++ b/src/features/Container/Protocols/CustomComponents/renderContent.scss
@@ -7,6 +7,16 @@
 
   .contentEditable {
     outline: none;
+    span {
+      font-size: 16px !important;
+      line-height: 1.4 !important;
+      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+      'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+      sans-serif !important;
+      color: #595959 !important;
+      position: static !important;
+      transform: none !important;
+    }
   }
 
   .contentEditable.content_header {
