resize issue fix

--- a/src/features/Container/Protocols/protocols.scss
+++ b/src/features/Container/Protocols/protocols.scss
@@ -343,6 +343,8 @@
     }
     padding-right: 10px;
     float: right;
+    min-width: 20%;
+    max-width: 80% !important;
     width: 100%;
     border-right: 0;
     flex-shrink: 100;
