confirm popup position bugfix

--- a/src/features/Container/Protocols/DigitizedPanel/Digitized.scss
+++ b/src/features/Container/Protocols/DigitizedPanel/Digitized.scss
@@ -7,6 +7,7 @@
   text-align: justify;
   display: flex;
   flex-direction: column;
+  position: relative;
   .accordion_details_loader {
     height: 60vh;
   }
