--- a/src/features/Container/Protocols/DigitizedPanel/Digitized.scss
+++ b/src/features/Container/Protocols/DigitizedPanel/Digitized.scss
@@ -50,6 +50,9 @@
     height: auto;
     max-height: 60vh;
     flex: 1 1 auto;
+    .Preferred-txt {
+      color: #e20000;
+    }
     .enriched-txt {
       color: #ff9300;
       cursor: pointer;
