--- a/src/features/Container/Protocols/protocols.scss
+++ b/src/features/Container/Protocols/protocols.scss
@@ -409,7 +409,7 @@
   position: relative;
   .plus-icon {
     display: flex;
-    justify-content: end;
+    justify-content: flex-end;
     margin-right: -2px;
   }
 
