--- a/src/features/Container/Protocols/CustomComponents/ImageUploader.scss
+++ b/src/features/Container/Protocols/CustomComponents/ImageUploader.scss
@@ -49,7 +49,7 @@
   top: 0;
   right: 0;
   left: 0;
-  bottom: 0;
+  bottom: 5px;
   width: 50%;
   display: flex;
   justify-content: flex-end;
@@ -83,5 +83,18 @@
 
   button:first-child {
     margin-right: 10px;
+  }
+}
+@media screen and (max-width: 1380px) {
+  .delete-confirmation-box {
+    p {
+      font-size: 12px;
+      margin-bottom: 10px;
+    }
+    button {
+      padding: 5px;
+      height: 25px;
+      font-size: 10px;
+    }
   }
 }
