--- a/src/features/Container/Protocols/protocols.scss
+++ b/src/features/Container/Protocols/protocols.scss
@@ -145,6 +145,7 @@
       > [class*='Panel-container-'] {
         max-width: 100% !important;
         flex-shrink: inherit;
+        width: 100%;
       }
     }
 
