--- a/src/features/Container/Protocols/protocols.scss
+++ b/src/features/Container/Protocols/protocols.scss
@@ -445,9 +445,9 @@
   border-top: 0;
 }
 
-.Accordian-padding:hover {
+.accordian-plusIcon-line:hover {
   border-bottom: 1px solid #0768fd;
-  border-image: linear-gradient(to right, #0768fd 96%, rgba(0, 0, 0, 0) 50%);
+  border-image: linear-gradient(to right, #0768fd 98%, rgba(0, 0, 0, 0) 50%);
   border-image-slice: 1;
 }
 
