--- a/src/features/Container/Protocols/LabData/LabData.scss
+++ b/src/features/Container/Protocols/LabData/LabData.scss
@@ -1,38 +1,61 @@
 .lab-table-container {
-  svg{
-    width: 1rem!important;
-    height: 1rem!important;
+  table {
+    tbody {
+      tr {
+        &:hover {
+          border-bottom: 2px solid #0768fd;
+          border-image: linear-gradient(
+            to right,
+            #0768fd 96%,
+            rgba(0, 0, 0, 0) 50%
+          );
+          border-image-slice: 1;
+        }
+        td{
+          border: 0;
+          &:first-child{
+            &:before{
+              display: none !important;
+            }
+          }
+        }
+      }
+    }
+  }
+  svg {
+    width: 1rem !important;
+    height: 1rem !important;
     color: inherit !important;
-    margin-bottom: 0!important;
-    margin-right:5px;
+    margin-bottom: 0 !important;
+    margin-right: 5px;
   }
   position: relative;
   & > div > div > div > div {
     margin-right: 50px;
-    h3{
+    h3 {
       margin: 0 !important;
       padding: 0 !important;
       font-size: 16px !important;
     }
-  & > button{
-    height: 40px;
-    font-size: inherit;
-    padding: 0 16px;
+    & > button {
+      height: 40px;
+      font-size: inherit;
+      padding: 0 16px;
+    }
   }
-}
 }
 .lab-btn-container {
   position: absolute;
-    right: 0;
-    top: 21px;
-    z-index: 9;
-    button{
-      svg{
-        color: #000 !important;
-        height: 1.2em !important;
-        width: 1.3em !important;
-      }
+  right: 0;
+  top: 21px;
+  z-index: 9;
+  button {
+    svg {
+      color: #000 !important;
+      height: 1.2em !important;
+      width: 1.3em !important;
     }
+  }
 }
 .mR {
   margin-right: 10px;
@@ -54,7 +77,7 @@
   cursor: pointer;
 }
 
-.saveCancelButtonGroup{
+.saveCancelButtonGroup {
   display: flex;
-    margin-top: 16px;
+  margin-top: 16px;
 }
