--- a/src/features/Container/Protocols/CustomComponents/PDTable/Components/table.scss
+++ b/src/features/Container/Protocols/CustomComponents/PDTable/Components/table.scss
@@ -206,3 +206,9 @@
 .delete-modal h3 {
   font-weight: 400;
 }
+
+.drag-icon-wrapper {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
