--- a/src/features/Container/Protocols/DigitizedPanel/Digitized.scss
+++ b/src/features/Container/Protocols/DigitizedPanel/Digitized.scss
@@ -54,6 +54,9 @@
     height: auto;
     max-height: 60vh;
     flex: 1 1 auto;
+    .Preferred-txt {
+      color: #0768fd;
+    }
     .enriched-txt {
       color: #ff9300;
       cursor: pointer;
@@ -70,6 +73,7 @@
     }
   }
 }
+
 .accordion_summary_container {
   display: flex;
   justify-content: space-between;
@@ -82,6 +86,9 @@
   }
   .discard-icon {
     margin-left: 6px;
+  }
+  .preferred-text {
+    color: #0768fd;
   }
 }
 
