--- a/src/features/Container/Protocols/CustomComponents/PDTable/Components/table.scss
+++ b/src/features/Container/Protocols/CustomComponents/PDTable/Components/table.scss
@@ -68,6 +68,9 @@
   outline: none;
   color: #000;
 }
+.editable-span {
+  width: 90%;
+}
 .pd-table-empty-cell-row {
   width: 100%;
   display: inline-block;
@@ -180,6 +183,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  margin-left: 30px;
 }
 .button-container {
   display: flex;
@@ -205,10 +209,4 @@
 
 .delete-modal h3 {
   font-weight: 400;
-}
-
-.drag-icon-wrapper {
-  width: 100%;
-  display: flex;
-  justify-content: center;
 }
