Defect fixes/metadata

--- a/src/features/Container/Protocols/CustomComponents/FontProperties/FontProperties.scss
+++ b/src/features/Container/Protocols/CustomComponents/FontProperties/FontProperties.scss
@@ -6,7 +6,8 @@
   position: sticky;
   width: 100%;
   top: 0;
-  left: 0;
+  left: 0px;
+  justify-content: flex-start;
   z-index: 9;
   .button-exec-icon {
     background-color: #fff;
