--- a/src/features/Container/Protocols/MetaData/MetaData.scss
+++ b/src/features/Container/Protocols/MetaData/MetaData.scss
@@ -134,6 +134,14 @@
   [class*='MuiTableRow-root-'] {
     height: auto !important;
   }
+  tr:last-child {
+    td:first-child:nth-last-child(1) {
+      display: none;
+    }
+  }
+  [class*='Table-scrollRoot-'] {
+    overflow-y: hidden;
+  }
 
   .metaData-boarder {
     border: 1px solid rgba(0, 0, 0, 0.08);
@@ -244,6 +252,11 @@
 }
 .subAccContainer {
   padding: 15px;
+}
+
+.date-field {
+  height: 20rem;
+  overflow-y: auto;
 }
 
 .modal {
