--- a/src/features/Container/Protocols/protocols.scss
+++ b/src/features/Container/Protocols/protocols.scss
@@ -154,17 +154,17 @@
       height: calc(100vh - 210px);
       outline: none;
       margin-left: 10px;
-      .panel-display{
+      .panel-display {
         display: flex;
         .panel-heading {
           margin-left: 15px;
-          width:50%;
+          width: 50%;
         }
-        .panel-download{
+        .panel-download {
           margin-top: 5px;
           width: 50%;
           text-align: right;
-          margin-right: 30px,
+          margin-right: 30px;
         }
       }
     }
@@ -387,6 +387,7 @@
     padding-right: 10px;
     border-right: 0;
     flex-grow: 1;
+    min-width: 30%;
     & > div > div {
       background-color: transparent;
     }
