Pd 3122/delete section/Defect 490

--- a/src/features/Container/Protocols/DigitizedPanel/Digitized.scss
+++ b/src/features/Container/Protocols/DigitizedPanel/Digitized.scss
@@ -87,11 +87,14 @@
   .discard-icon {
     margin-left: 6px;
   }
+
   .preferred-text {
     color: #0768fd;
   }
 }
-
+.trash-icon {
+  padding-bottom: 5px;
+}
 .auditPopover {
   padding: 10px;
   display: flex;
