--- a/src/features/Container/Protocols/DigitizedPanel/Digitized.scss
+++ b/src/features/Container/Protocols/DigitizedPanel/Digitized.scss
@@ -80,6 +80,7 @@
   align-items: center;
   min-height: 48px;
   width: 100%;
+  word-break: break-all;
   p {
     line-height: 1.2;
     padding: 10px 0;
