--- a/src/features/Container/Protocols/protocols.scss
+++ b/src/features/Container/Protocols/protocols.scss
@@ -154,18 +154,19 @@
       height: calc(100vh - 210px);
       outline: none;
       margin-left: 10px;
-      .panel-display {
-        display: flex;
-        .panel-heading {
-          margin-left: 15px;
-          width: 50%;
-        }
-        .panel-download {
-          margin-top: 5px;
-          width: 50%;
-          text-align: right;
-          margin-right: 30px;
-        }
+
+      .panel-heading {
+        margin-left: 15px;
+        width: 50%;
+      }
+      .panel-download {
+        position: absolute;
+        top: 10px;
+        right: 0;
+        margin-top: 5px;
+        width: 50%;
+        text-align: right;
+        margin-right: 30px;
       }
     }
   }
