take a latest code

--- a/src/features/Container/Protocols/LabData/LabData.scss
+++ b/src/features/Container/Protocols/LabData/LabData.scss
@@ -35,6 +35,7 @@
         }
         td {
           border: 0;
+          position: static;
           &:first-child {
             &:before {
               display: none !important;
