take a latest code

--- a/src/features/Container/Protocols/LabData/LabData.scss
+++ b/src/features/Container/Protocols/LabData/LabData.scss
@@ -87,6 +87,20 @@
       padding: 0 16px;
     }
   }
+  &.table-hover{
+    table {
+      tbody {
+        tr {
+          &::after {
+            display: none;
+          }
+          &:hover {
+            border-bottom:0;
+          }
+        }
+      }
+    }
+  }
 }
 .lab-btn-container {
   position: absolute;
