[PD-3325] Normalized SOA  fixes

--- a/src/features/Container/Protocols/SOA/SOA.scss
+++ b/src/features/Container/Protocols/SOA/SOA.scss
@@ -1,6 +1,6 @@
 .soa-content-holder {
-  margin: 16px 48px 0px 48px;
-  width: 1150px;
+  margin: 16px 48px 0px 5px;
+  width: 100%
 }
 .side-nav {
   width: 200px;
