--- a/src/features/Container/Protocols/DIPA/DipaViewStructure.scss
+++ b/src/features/Container/Protocols/DIPA/DipaViewStructure.scss
@@ -6,6 +6,18 @@
   margin-top: 15px;
   width: 95%;
   margin-left: 10px;
+  border: transparent;
+  .dipaview-summary-expand {
+    border: 1px solid #e8e8e8;
+  }
+}
+.actual-text {
+  display: flex;
+  .actual-text-details {
+    width: 80%;
+    padding-top: 10px;
+    height: fit-content;
+  }
 }
 
 .dipa-view-count {
@@ -17,15 +29,22 @@
     padding-top: 0px;
   }
 }
-.segment-dc {
+.dipaview-icons {
   margin-top: 10px;
-  .segment-derived-count {
-    display: flex;
-    padding-left: 10px;
-    margin-right: 10px;
-    width: 110px;
+  display: flex;
+}
+.segment {
+  padding-bottom: 20px;
+  .segment-dc {
+    margin-top: 10px;
+    .segment-derived-count {
+      display: flex;
+      padding-left: 10px;
+      margin-right: 10px;
+      width: 110px;
+    }
+    border-left: 1px solid #e8e8e8;
   }
-  border-left: 1px solid #e8e8e8;
 }
 .paragraph-icon {
   display: inline-flex;
@@ -33,6 +52,7 @@
 }
 .icon-eyeshow {
   border-left: 1px solid #e8e8e8;
+  height: 7vh;
   padding-left: 10px;
 }
 .icon-pencil {
@@ -46,6 +66,9 @@
   margin: 2px;
   padding: 5px;
   margin-bottom: 5px;
+  .segment-text {
+    width: 100%;
+  }
 }
 .segment-length {
   margin-left: 10px;
@@ -97,11 +120,9 @@
 .MuiCard-root {
   padding: 0px;
 }
-
 .MuiAccordionSummary-root:hover {
   background: none;
 }
-
 .MuiAccordionDetails-root {
   padding: 0px;
 }
@@ -109,6 +130,6 @@
   padding: 0 23px;
 }
 .structure-container {
-  height: 25rem;
+  height: 350px;
   overflow-y: auto;
 }
