--- a/src/features/Container/Protocols/LabData/LabData.scss
+++ b/src/features/Container/Protocols/LabData/LabData.scss
@@ -31,8 +31,9 @@
         td {
           border: 0;
           position: static;
-          &:last-child{
+          &:last-child {
             text-align: right;
+            display: flex;
           }
           &:first-child {
             &:before {
@@ -85,7 +86,7 @@
       padding: 0 16px;
     }
   }
-  &.table-hover{
+  &.table-hover {
     table {
       tbody {
         tr {
@@ -112,7 +113,7 @@
   top: 21px;
   z-index: 9;
   .btn-common {
-    margin:0 5px;
+    margin: 0 5px;
     svg {
       color: #000 !important;
       height: 1.2em !important;
@@ -158,7 +159,7 @@
   justify-content: center;
   align-items: center;
 }
-.lab-table-container table + div svg{
+.lab-table-container table + div svg {
   width: auto !important;
   height: auto !important;
   color: inherit !important;
