--- a/src/features/Container/Protocols/DigitizedPanel/Digitized.scss
+++ b/src/features/Container/Protocols/DigitizedPanel/Digitized.scss
@@ -1,7 +1,6 @@
 .section-single-content {
   height: auto;
-  overflow: auto !important;
-  padding: 0 5px 20px 10px;
+  padding: 0;
   font-size: 16px;
   line-height: 1.4;
   text-align: justify;
@@ -10,6 +9,19 @@
   position: relative;
   .accordion_details_loader {
     height: 60vh;
+    // right: 260px;
+  }
+  .link-data {
+    display: flex;
+    align-items: center;
+    p {
+      div {
+        h1 {
+          padding: 4px 10px;
+          margin-right: 10px;
+        }
+      }
+    }
   }
   .content_container,
   .readable-content {
@@ -50,10 +62,17 @@
     padding: '15px';
     padding-left: '5px';
   }
+  .readable-content-wrapper {
+    display: flex;
+    overflow-x: hidden;
+  }
   .readable-content {
     height: auto;
     max-height: 60vh;
     flex: 1 1 auto;
+    width: 90%;
+    padding-right: 16%;
+    min-height: 376px;
     .Preferred-txt {
       color: #0768fd;
     }
@@ -102,8 +121,12 @@
   width: max-content;
   .textContainer {
     padding: 0 5px;
+    margin-left: 23px;
     p {
       padding: 5px 0;
+      b {
+        display: block;
+      }
     }
   }
 }
@@ -112,6 +135,15 @@
   flex-direction: row;
   min-height: 48px;
   align-items: center;
+}
+
+.menu-wrapper {
+  width: 12%;
+  height: 100%;
+  display: flex;
+  position: absolute;
+  right: 0;
+  justify-content: end;
 }
 
 @media only screen and (max-width: 1366px) {
@@ -132,4 +164,3 @@
   height: 100%;
   top: 0;
 }
-
