--- a/src/features/Container/Protocols/CustomComponents/renderContent.scss
+++ b/src/features/Container/Protocols/CustomComponents/renderContent.scss
@@ -10,9 +10,9 @@
     span {
       font-size: 16px !important;
       line-height: 1.4 !important;
-      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-      'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-      sans-serif !important;
+      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto',
+        'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans',
+        'Helvetica Neue', sans-serif !important;
       color: #595959 !important;
       position: static !important;
       transform: none !important;
@@ -22,5 +22,15 @@
   .contentEditable.content_header {
     font-weight: bold;
     margin-bottom: 15px;
+  }
+}
+
+@media only screen and (max-width: 1366px) {
+  .format-container {
+    .contentEditable {
+      span {
+        font-size: 12px !important;
+      }
+    }
   }
 }
