--- a/src/features/Container/Protocols/DigitizedPanel/Digitized.scss
+++ b/src/features/Container/Protocols/DigitizedPanel/Digitized.scss
@@ -99,10 +99,11 @@
   align-items: center;
   min-height: 48px;
   width: 100%;
-  word-break: break-all;
+  word-break: break-word;
   p {
     line-height: 1.2;
     padding: 10px 0;
+    word-break: break-word;
   }
   .discard-icon {
     margin-left: 6px;
