fix: added tooltip on hover

--- a/src/features/Container/Protocols/DIPA/DipaViewStructure.scss
+++ b/src/features/Container/Protocols/DIPA/DipaViewStructure.scss
@@ -33,6 +33,12 @@
   margin-top: 10px;
   display: flex;
 }
+.save-button {
+  margin-top: 10px;
+}
+.pencil-button-icon {
+  opacity: 0.45;
+}
 .segment {
   padding-bottom: 20px;
   .segment-dc {
