PD-4003- fixing the alerts list ui defect-609

--- a/src/features/Container/Navbar/Alerts.scss
+++ b/src/features/Container/Navbar/Alerts.scss
@@ -128,7 +128,7 @@
 .listItemTextRoot {
   margin-top: 30px;
   padding-left: 0;
-  white-space: nowrap;
+  white-space: wrap;
 }
 .listItemTextPrimary {
   font-size: 14px;
