--- a/src/App.scss
+++ b/src/App.scss
@@ -78,3 +78,9 @@
   display: flex;
   flex-direction: row;
 }
+.custom-loader-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 300px;
+}
