--- a/src/features/Container/Protocols/DigitizedPanel/Digitized.scss
+++ b/src/features/Container/Protocols/DigitizedPanel/Digitized.scss
@@ -144,7 +144,7 @@
   display: flex;
   position: absolute;
   right: 0;
-  justify-content: end;
+  justify-content: flex-end;
 }
 
 @media only screen and (max-width: 1366px) {
