--- a/src/features/Container/Protocols/LabData/LabData.scss
+++ b/src/features/Container/Protocols/LabData/LabData.scss
@@ -1,9 +1,9 @@
 .lab-table-container {
   table {
-    tfoot{
-      tr{
-        td{
-          & > div{
+    tfoot {
+      tr {
+        td {
+          & > div {
             width: 100% !important;
           }
         }
@@ -89,6 +89,7 @@
       height: 40px;
       font-size: inherit;
       padding: 0 16px;
+      z-index: 100;
     }
   }
   &.table-hover {
@@ -128,6 +129,10 @@
 }
 .mR {
   margin-right: 10px;
+}
+
+.clear-button {
+  margin-right: 100px !important;
 }
 .btn-filter {
   span {
@@ -173,4 +178,8 @@
 }
 .table-hover table tbody td:last-child {
   flex-direction: row-reverse;
+}
+
+.lab-table-container > div:last-child > div > div:last-child {
+  overflow-x: unset;
 }
