--- a/src/features/Container/Navbar/Alerts.scss
+++ b/src/features/Container/Navbar/Alerts.scss
@@ -24,7 +24,9 @@
 }
 
 .IconButton-delete {
-  margin-bottom: 30px;
+  position: absolute;
+  right: 17px;
+  top: 8px;
   display: none;
   svg {
     font-size: 16px;
@@ -59,6 +61,7 @@
   min-width: 0;
   margin-top: 0;
   margin-bottom: 0;
+  max-width: 260px;
 }
 .Typography-root {
   margin: 0;
