--- a/src/features/Container/Protocols/protocols.scss
+++ b/src/features/Container/Protocols/protocols.scss
@@ -444,6 +444,7 @@
     padding-right: 10px;
     border-right: 0;
     flex-grow: 1;
+    min-width: 30%;
     & > div > div {
       background-color: transparent;
     }
