--- a/src/features/Container/Protocols/CustomComponents/renderContent.scss
+++ b/src/features/Container/Protocols/CustomComponents/renderContent.scss
@@ -7,6 +7,8 @@
 
   .contentEditable {
     outline: none;
+    height: auto;
+    border: none;
     span {
       font-size: 16px !important;
       line-height: 1.4 !important;
@@ -18,7 +20,9 @@
       transform: none !important;
     }
   }
-
+  .editable:empty:before {
+    content: attr(data-placeholder);
+  }
   .contentEditable.content_header {
     font-weight: bold;
     margin-bottom: 15px;
