--- a/src/features/Container/Protocols/DigitizedPanel/Digitized.scss
+++ b/src/features/Container/Protocols/DigitizedPanel/Digitized.scss
@@ -7,6 +7,7 @@
   display: flex;
   flex-direction: column;
   position: relative;
+  overflow: scroll;
   .accordion_details_loader {
     height: 60vh;
     // right: 260px;
@@ -64,7 +65,6 @@
   }
   .readable-content-wrapper {
     display: flex;
-    overflow-x: hidden;
   }
   .readable-content {
     height: auto;
