--- a/src/features/Container/Protocols/CustomComponents/FontProperties/FontProperties.scss
+++ b/src/features/Container/Protocols/CustomComponents/FontProperties/FontProperties.scss
@@ -4,7 +4,7 @@
   display: flex;
   align-items: center;
   position: sticky;
-  width: 100%;
+  width: calc(100% - 60px);
   top: 0;
   left: 0px;
   justify-content: flex-start;
@@ -58,9 +58,5 @@
 
   .right-menu button svg {
     font-size: 12px;
-  }
-
-  .button-container.font-properties .right-menu {
-    margin-right: 50px;
   }
 }
