--- a/src/features/Container/Protocols/LabData/LabData.scss
+++ b/src/features/Container/Protocols/LabData/LabData.scss
@@ -70,16 +70,25 @@
       }
     }
   }
+
+  .btn-container {
+    button {
+      margin-left: 10px;
+    }
+  }
   svg {
-    width: 1rem !important;
-    height: 1rem !important;
     color: inherit !important;
-    margin-bottom: 0 !important;
+  }
+
+  .btn-container svg {
+    width: 1.4rem !important;
+    height: 1.4rem !important;
     margin-right: 5px;
   }
+
   position: relative;
   & > div:last-child > div:first-child > div:first-child > div:last-child {
-    margin-right: 55px;
+    overflow-x: unset;
     h3 {
       margin: 0 !important;
       padding: 0 !important;
@@ -116,7 +125,7 @@
 .lab-btn-container {
   position: absolute;
   right: 0;
-  top: 21px;
+  top: 30px;
   z-index: 9;
   .btn-common {
     margin: 0 5px;
@@ -131,9 +140,6 @@
   margin-right: 10px;
 }
 
-.clear-button {
-  margin-right: 100px !important;
-}
 .btn-filter {
   span {
     font-weight: 600;
